create banner section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurent</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div>
+                <h2>BISTROO BOSS</h2>
+                <P style="letter-spacing: 8px;">RESTAURENT</P>
+            </div>
+            <ul>
+                <li>HOME</li>
+                <li>CONTACT US</li>
+                <li>DASHBOARD</li>
+                <li>OUR MENU</li>
+                <li>OUR SHOP</li>
+                <li>SIGN OUT</li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
