responsive banner and navbar section

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav>
             <div>
-                <h2>BISTROO BOSS</h2>
-                <P style="letter-spacing: 8px;">RESTAURENT</P>
+                <h2 style="margin-bottom: 0;">BISTROO BOSS</h2>
+                <P style="letter-spacing: 8px; margin-top: 5px;">RESTAURENT</P>
             </div>
             <ul>
                 <li>HOME</li>
@@ -23,12 +23,13 @@
                 <li>OUR SHOP</li>
                 <li>SIGN OUT</li>
             </ul>
+            <img src="./images/menu.png" alt="">
         </nav>
     </header>
 
 
     <main>
-        <section class="order-section">
+        <!-- <section class="order-section">
             <div class="order">
                 <div class="heading">
                     <p>ORDER ONLINE</p>
@@ -52,7 +53,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 </body>
 
