responsive order section for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -29,31 +29,31 @@
 
 
     <main>
-        <!-- <section class="order-section">
+        <section class="order-section">
             <div class="order">
                 <div class="heading">
                     <p>ORDER ONLINE</p>
                 </div>
                 <div class="order-image-container">
                     <div class="order-image">
-                        <img src="./images/Rectangle 5.png" alt="">
+                        <img style="width: 100%;" src="./images/Rectangle 5.png" alt="">
                         <p>SALADS</p>
                     </div>
                     <div class="order-image">
-                        <img src="./images/Rectangle 6.png" alt="">
+                        <img style="width: 100%;" src="./images/Rectangle 6.png" alt="">
                         <p>SOUPS</p>
                     </div>
                     <div class="order-image">
-                        <img src="./images/Rectangle 7.png" alt="">
+                        <img style="width: 100%;"  src="./images/Rectangle 7.png" alt="">
                         <p>PIZZAS</p>
                     </div>
                     <div class="order-image">
-                        <img src="./images/Rectangle 8.png" alt="">
+                        <img style="width: 100%;"  src="./images/Rectangle 8.png" alt="">
                         <p>DESSERTS</p>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
 </body>
 
