create from menu section

--- a/index.html
+++ b/index.html
@@ -44,15 +44,76 @@
                         <p>SOUPS</p>
                     </div>
                     <div class="order-image">
-                        <img style="width: 100%;"  src="./images/Rectangle 7.png" alt="">
+                        <img style="width: 100%;" src="./images/Rectangle 7.png" alt="">
                         <p>PIZZAS</p>
                     </div>
                     <div class="order-image">
-                        <img style="width: 100%;"  src="./images/Rectangle 8.png" alt="">
+                        <img style="width: 100%;" src="./images/Rectangle 8.png" alt="">
                         <p>DESSERTS</p>
                     </div>
                 </div>
             </div>
+        </section>
+
+
+
+
+        <section class="form-menu">
+            <div class="heading">
+                <p>FROM OUR MENU</p>
+            </div>
+
+            <div class="menu-card-container">
+                <div class="menu-card">
+                    <img src="./images/roast.jpg" alt="">
+                    <div>
+                        <h2>ROAST DUCK BREAST</h2>
+                        <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
+                    </div>
+                    <h4>$14.5</h4>
+                </div>
+                <div class="menu-card">
+                    <img src="./images/roast.jpg" alt="">
+                    <div>
+                        <h2>ESCALOPE DE VEAU</h2>
+                        <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
+                    </div>
+                    <h4 style="color: #BF8C15;">$14.5</h4>
+                </div>
+                <div class="menu-card">
+                    <img src="./images/roast.jpg" alt="">
+                    <div>
+                        <h2>FISH PARMENTIER</h2>
+                        <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
+                    </div>
+                    <h4>$14.5</h4>
+                </div>
+                <div class="menu-card">
+                    <img src="./images/roast.jpg" alt="">
+                    <div>
+                        <h2>TUNA NIÇOISE</h2>
+                        <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
+                    </div>
+                    <h4>$14.5</h4>
+                </div>
+                <div class="menu-card">
+                    <img src="./images/roast.jpg" alt="">
+                    <div>
+                        <h2>CHICKEN AND WALNUT SALAD</h2>
+                        <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
+                    </div>
+                    <h4 style="font-weight: 900;">$14.5</h4>
+                </div>
+                <div class="menu-card">
+                    <img src="./images/roast.jpg" alt="">
+                    <div>
+                        <h2>ROASTED PORK BELLY</h2>
+                        <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
+                    </div>
+                    <h4>$14.5</h4>
+                </div>
+            </div>
+            <button>View All</button>
         </section>
     </main>
 </body>
