--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                     <h4>$14.5</h4>
                 </div>
             </div>
-            <button>View All</button>
+            <div style="display: flex; justify-content: center;">
+                <button>VIEW FULL MENU</button>
+            </div>
         </section>
     </main>
 </body>
