create call us section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
                 <button>VIEW FULL MENU</button>
             </div>
         </section>
+
+
+
+
+
+        <section class="call-us">
+<h1>Call Us: +92 7834089</h1>
+        </section>
     </main>
 </body>
 
