--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h4>$14.5</h4>
                 </div>
                 <div class="menu-card">
-                    <img src="./images/roast.jpg" alt="">
+                    <img src="./images/Escalopes.jpg" alt="">
                     <div>
                         <h2>ESCALOPE DE VEAU</h2>
                         <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
@@ -81,7 +81,7 @@
                     <h4 style="color: #BF8C15;">$14.5</h4>
                 </div>
                 <div class="menu-card">
-                    <img src="./images/roast.jpg" alt="">
+                    <img src="./images/fish-paremntier.jpg" alt="">
                     <div>
                         <h2>FISH PARMENTIER</h2>
                         <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
@@ -89,7 +89,7 @@
                     <h4>$14.5</h4>
                 </div>
                 <div class="menu-card">
-                    <img src="./images/roast.jpg" alt="">
+                    <img src="./images/Tuna-Nicoise.jpg" alt="">
                     <div>
                         <h2>TUNA NIÇOISE</h2>
                         <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
@@ -97,7 +97,7 @@
                     <h4>$14.5</h4>
                 </div>
                 <div class="menu-card">
-                    <img src="./images/roast.jpg" alt="">
+                    <img src="./images/chicken-salad.jpg" alt="">
                     <div>
                         <h2>CHICKEN AND WALNUT SALAD</h2>
                         <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
@@ -105,7 +105,7 @@
                     <h4 style="font-weight: 900;">$14.5</h4>
                 </div>
                 <div class="menu-card">
-                    <img src="./images/roast.jpg" alt="">
+                    <img src="./images/pork-bally.jpg" alt="">
                     <div>
                         <h2>ROASTED PORK BELLY</h2>
                         <p>Roasted duck breast (served pink) with gratin potato and a griottine cherry sauce</p>
@@ -123,7 +123,17 @@
 
 
         <section class="call-us">
-<h1>Call Us: +92 7834089</h1>
+            <h1>Call Us: +92 7834089</h1>
+        </section>
+
+
+
+
+
+        <section class="chef-recommends">
+            <div class="heading">
+                <p>CHEF RECOMMENDS</p>
+            </div>
         </section>
     </main>
 </body>
