create chef recommends section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h4>$14.5</h4>
                 </div>
             </div>
-            <div style="display: flex; justify-content: center;">
+            <div style="display: flex; justify-content: center; margin-top: 25px;">
                 <button>VIEW FULL MENU</button>
             </div>
         </section>
@@ -133,6 +133,40 @@
         <section class="chef-recommends">
             <div class="heading">
                 <p>CHEF RECOMMENDS</p>
+            </div>
+            <div class="chef-card-container">
+                <div class="chef-card">
+                    <img style="width: 100%; height: 260px; " src="./images/chef1.jpg" alt="">
+                    <div style="text-align: center;">
+                        <h2>Caeser Salad</h2>
+                        <p>Lettuce, Eggs, Parmesan Cheese, Chicken Breast Fillets.</p>
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="chef-card">
+                    <img style="width: 100%; height: 260px; " src="./images/chef2.jpg" alt="">
+                    <div style="text-align: center;">
+                        <h2>Caeser Salad</h2>
+                        <p>Lettuce, Eggs, Parmesan Cheese, Chicken Breast Fillets.</p>
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="chef-card">
+                    <img style="width: 100%; height: 260px; " src="./images/chef3.jpg" alt="">
+                    <div style="text-align: center;">
+                        <h2>Caeser Salad</h2>
+                        <p>Lettuce, Eggs, Parmesan Cheese, Chicken Breast Fillets.</p>
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="chef-card">
+                    <img style="width: 100%; height: 260px; " src="./images/chef4.jpg" alt="">
+                    <div style="text-align: center; padding: 10px;">
+                        <h2>Chicken fry</h2>
+                        <p>Lettuce, Eggs, Parmesan Cheese, Chicken Breast Fillets.</p>
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
