--- a/index.html
+++ b/index.html
@@ -170,6 +170,30 @@
             </div>
         </section>
     </main>
+
+
+    <footer>
+        <section class="footer-section">
+            <div
+                style="background-color:#1F2937; height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; text-align: center; padding: 10px;">
+                <div>
+                    <h1>CONTACT US</h1>
+                    <p>123 ABS Street, Uni 21, Bangladesh
+                    <p>+88 123456789</p>
+                    <p>Mon - Fri: 08:00 - 22:00</p>
+                    <p>Sat - Sun: 10:00 - 23:00</p>
+                </div>
+            </div>
+            <div
+                style="background-color:#111827; height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; padding: 10px;">
+                <div>
+                    <h1>Follow US</h1>
+                    <p>Join us on social media</p>
+                    <p>Copyright © CulinaryCloud. All rights reserved.</p>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
