add social media icon

--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
                 <div>
                     <h1>Follow US</h1>
                     <p>Join us on social media</p>
+                    <div style="display: flex; gap: 20px;">
+                        <img src="./images/facebook.png" alt="">
+                        <img src="./images/insta.png" alt="">
+                        <img src="./images/twitter 1.png" alt="">
+                    </div>
                     <p>Copyright © CulinaryCloud. All rights reserved.</p>
                 </div>
             </div>
