create featured section

--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@
                 </div>
             </div>
         </section>
+
+
+
+        <section class="featured-section">
+            <img style="width: 450px;height: 300px;" src="./images/featured.jpg" alt="">
+            <div style="width: 30%;">
+                <p>March 20, 2023</p>
+                <p>WHERE CAN I GET SOME?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptate facere, deserunt dolores
+                    maiores quod nobis quas quasi. Eaque repellat recusandae ad laudantium tempore consequatur
+                    consequuntur omnis ullam maxime tenetur.</p>
+            </div>
+        </section>
     </main>
 
 
