--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 
 
         <section class="featured-section">
-            <img style="width: 450px;height: 300px;" src="./images/featured.jpg" alt="">
-            <div style="width: 30%;">
+            <img src="./images/featured.jpg" alt="">
+            <div class="featured-text">
                 <p>March 20, 2023</p>
                 <p>WHERE CAN I GET SOME?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptate facere, deserunt dolores
