--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@
 
 
 
+
+        <section class="featured-section">
+            <img src="./images/featured.jpg" alt="">
+            <div class="featured-text">
+                <p>March 20, 2023</p>
+                <p>WHERE CAN I GET SOME?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptate facere, deserunt dolores
+                    maiores quod nobis quas quasi. Eaque repellat recusandae ad laudantium tempore consequatur
+                    consequuntur omnis ullam maxime tenetur.</p>
+            </div>
+        </section>
+
+
+
+
+
         <section class="chef-recommends">
             <div class="heading">
                 <p>CHEF RECOMMENDS</p>
@@ -137,7 +153,7 @@
             <div class="chef-card-container">
                 <div class="chef-card">
                     <img style="width: 100%; height: 260px; " src="./images/chef1.jpg" alt="">
-                    <div style="text-align: center;">
+                    <div style="text-align: center; padding: 10px;">
                         <h2>Caeser Salad</h2>
                         <p>Lettuce, Eggs, Parmesan Cheese, Chicken Breast Fillets.</p>
                         <button>ADD TO CART</button>
@@ -145,7 +161,7 @@
                 </div>
                 <div class="chef-card">
                     <img style="width: 100%; height: 260px; " src="./images/chef2.jpg" alt="">
-                    <div style="text-align: center;">
+                    <div style="text-align: center; padding: 10px;">
                         <h2>Caeser Salad</h2>
                         <p>Lettuce, Eggs, Parmesan Cheese, Chicken Breast Fillets.</p>
                         <button>ADD TO CART</button>
@@ -153,7 +169,7 @@
                 </div>
                 <div class="chef-card">
                     <img style="width: 100%; height: 260px; " src="./images/chef3.jpg" alt="">
-                    <div style="text-align: center;">
+                    <div style="text-align: center; padding: 10px;">
                         <h2>Caeser Salad</h2>
                         <p>Lettuce, Eggs, Parmesan Cheese, Chicken Breast Fillets.</p>
                         <button>ADD TO CART</button>
@@ -170,18 +186,6 @@
             </div>
         </section>
 
-
-
-        <section class="featured-section">
-            <img src="./images/featured.jpg" alt="">
-            <div class="featured-text">
-                <p>March 20, 2023</p>
-                <p>WHERE CAN I GET SOME?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptate facere, deserunt dolores
-                    maiores quod nobis quas quasi. Eaque repellat recusandae ad laudantium tempore consequatur
-                    consequuntur omnis ullam maxime tenetur.</p>
-            </div>
-        </section>
     </main>
 
 
